# simplefs

./: .gitignore  Cargo.toml  README.md
src/: disk.rs  fs.rs  lib.rs
