[package]
name = "simplefs"
version = "0.1.0"
authors = ["jmcph4 <jmcph4@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
bincode = "1.2.1"
libmath = "0.2.1"

